# upskill-python

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: black.yml  build-and-publish-docker.yml  checkout.yaml  docker.yml  mypy.yml  pylint.yml
PostgreSQLScript/: Data.sql  SFTPApi.sql  SitesApi.sql  UsersTable.sql
SFTPApi/: db.py  models.py  setup.py  sync_data.py
SFTPApi/data_loaders/: excel_file_reader.py  parquet_file_reader.py
SFTPApi/services/: department_service.py  people_service.py
SFTPApi/utils/: file_transfer.py
SQLAlchemy/: app.py  db.py  models.py
SitesAPI/: collect_sites.py  db.py  models.py
SitesAPI/clients/: sitesApi_client.py
app/: database.py  main.py  middleware.py  models.py
app/routers/: task.py
app/test/: test_main.py  test_task.py  utils.py
core/db/: base_db.py
migrations/: env.py
migrations/versions/: 86914b7363ed_added_task_table.py
sftp_api/: db.py  file_reader.py  sync_data.py
sftp_api/utils/: file_transfer.py
sites_api/: collect_sites.py  db.py  models.py
sites_api/clients/: sites_api_client.py
sql_alchemy/: app.py  db.py  models.py
